Changed the YAML file

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -118,7 +118,8 @@ jobs:
       run: |
         echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
       
-    If this is a PR post the changes
+    #If this is a PR post the changes
+    
     - name: Push Terraform Output to PR
       if: github.ref != 'refs/heads/master'
       uses: actions/github-script@v6
