--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -2,12 +2,12 @@ name: 'Terraform Plan/Apply'
 on:
   push:
     branches:
-    - master
+    - main
     
     
   pull_request:
     branches:
-    - master
+    - main
     
 #Special permissions required for OIDC authentication
 permissions:
@@ -118,7 +118,7 @@ jobs:
     #If this is a PR post the changes
 
     - name: Push Terraform Output to PR
-      if: github.ref != 'refs/heads/master'
+      if: github.ref != 'refs/heads/main'
       uses: actions/github-script@v6
       env:
         SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
@@ -140,7 +140,7 @@ jobs:
       ARM_SKIP_PROVIDER_REGISTRATION: true
       ARM_ACCESS_KEY: ${{ secrets.ARM_ACCESS_KEY }}
     
-    if: github.ref == 'refs/heads/master' && needs.terraform-plan.outputs.tfplanExitCode == 2
+    if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
     runs-on: ubuntu-latest
     needs: [terraform-plan]
     
