--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -175,5 +175,5 @@ jobs:
 
     # Terraform Apply
     - name: Terraform Apply
-      run:  terraform apply -auto-approve ../tfplan
+      run:  terraform apply -auto-approve tfplan
 
